# ZJU_GAZEBO_ENV

./: .gitattributes
gazebo-environment-main/: README.md  run.sh
gazebo-environment-main/src/VID-Fusion-main/config/rotors_sim/: sim_config.yaml
gazebo-environment-main/src/VID-Fusion-main/utilities/quadrotor_msgs/: CMakeLists.txt
gazebo-environment-main/src/VID-Fusion-main/vid_estimator/launch/: vid_sim.launch
gazebo-environment-main/src/planner/: .gitignore
gazebo-environment-main/src/planner/ball_detect/: CMakeLists.txt  package.xml
gazebo-environment-main/src/planner/ball_detect/config/: camera.yaml  default.yaml
gazebo-environment-main/src/planner/ball_detect/include/: color_detector.h  kalman_filter.h
gazebo-environment-main/src/planner/ball_detect/launch/: demo.launch  simulation.rviz
gazebo-environment-main/src/planner/ball_detect/src/: color_detect_node.cpp  color_detector.cpp  color_obj_detect_node.cpp  kalman_filter.cpp
gazebo-environment-main/src/planner/bspline_opt/: CMakeLists.txt
gazebo-environment-main/src/planner/bspline_opt/src/: bspline_optimizer.cpp
gazebo-environment-main/src/planner/drone_detect/: CMakeLists.txt
gazebo-environment-main/src/planner/plan_env/: CMakeLists.txt  package.xml
gazebo-environment-main/src/planner/plan_env/src/: grid_map.cpp  obj_generator.cpp
gazebo-environment-main/src/planner/plan_manage/: CMakeLists.txt  package.xml
gazebo-environment-main/src/planner/plan_manage/launch/: advanced_param_exp.xml  default.rviz  default_sim.rviz  rviz.launch  (+4 more)
gazebo-environment-main/src/planner/traj_utils/: CMakeLists.txt
(+17 files in other folders)
